@@ -1,4 +1,4 @@
-AC_INIT([OpenFst], [1.3.3], [help@www.openfst.org])
+AC_INIT([OpenFst], [1.3.4], [help@www.openfst.org])
 AM_INIT_AUTOMAKE([foreign nostdinc -Wall -Werror])
 
 AC_PROG_CXX
